# bedolaga-grace-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: ci.yml  load-test.yml  release.yml
deploy/: Dockerfile
docs/: architecture.md  compatibility.md  installation.md  load-testing.md  recovery.md  security.md
patches/bedolaga/: LICENSE  compatibility.json
patches/bedolaga/v3.64.0/: bedolaga-grace-bridge.patch
schema/: 001_initial.sql  002_candidate_indexes.sql
scripts/: gracebridge-rescue.sh  load_test_postgres.py  load_test_workers.py  rescue_standalone.py  run_isolated_remote_loadtest.sh  verify_compatibility.py
src/bedolaga_grace_bridge/: __init__.py  backup.py  cli.py  compatibility.py  config.py  controller.py  deploy.py  detect.py  diagnostics.py  drain.py  panel_admin.py  panel_discovery.py  patcher.py  preflight.py  queries.py  remnawave.py  rollback.py  runner.py  runtime.py  schema.py  state.py
src/bedolaga_grace_bridge/security/: __init__.py  redaction.py
templates/: config.env.example  secrets.env.example
tests/: test_backup_integrity.py  test_cancellation_cleanup.py  test_cli_menu.py  test_compatibility.py  test_panel_admin.py  test_panel_discovery.py  test_redaction.py  test_remnawave_contract.py  test_rollout_scalability.py  test_runtime_safety.py  test_schema_isolation.py  test_schema_migrations.py
