[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "bedolaga-grace-bridge"
version = "0.2.0"
description = "Управляемое сохранение ограниченного доступа для Bedolaga и Remnawave"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "LaRsonOFFai" },
]
dependencies = [
  "aiohttp>=3.10,<4",
  "asyncpg>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
]

[project.scripts]
gracectl = "bedolaga_grace_bridge.cli:main"
gracebridge-controller = "bedolaga_grace_bridge.controller:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bedolaga_grace_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "ASYNC"]
ignore = ["S603", "S607", "S608", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]
